# tkp-platform

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  test_rag_features.py
.github/workflows/: api-tests.yml  sql-governance.yml
docs/: COMPLETE_IMPLEMENTATION_SUMMARY.md  FEATURE_GAP_ANALYSIS.md  GAP_IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_STATUS.md  code-guide.md  knowledge-platform-architecture.md  operations-runbook.md  productization-roadmap.md  release-checklist.md  security-baseline.md  sla-slo-policy.md
infra/: podman-compose.yml
infra/grafana/provisioning/dashboards/: dashboards.yml  tkp-overview.json
infra/prometheus/: prometheus.yml
infra/sql/: 000_extensions.sql  010_tables.sql  020_indexes.sql  030_comments.sql  040_seed_permissions.sql  README.md
infra/sql/migrations/: 20250306_210000_add_user_feedback_tables.sql  20250306_220000_add_agent_checkpoint_tables.sql  20260228_160000_init_migration_framework.sql  20260302_140000_add_user_delete_permissions.sql  20260305_160000_add_retrieval_eval_tables.sql  20260305_183000_add_quota_policies.sql  20260306_100000_add_ops_phase3_tables.sql  20260306_130000_add_ops_phase4_tables.sql  20260306_200000_add_vector_embedding_column.sql  20260307_100000_enable_rls.sql  20260307_110000_add_deletion_tables.sql  README.md
scripts/: check_sql_governance.sh  pre_commit_ci_gate.sh  stack_down.sh  stack_logs.sh  stack_up.sh  test_api.sh  test_api_full_coverage.sh  test_api_permissions_matrix.sh  test_api_smoke.sh  test_data_plane_e2e.sh  test_env_down.sh  test_env_reset_db.sh  test_env_up.sh
services/api/: Dockerfile  pyproject.toml
services/api/scripts/: sync_elasticsearch.py
services/api/src/tkp_api/: __init__.py  dependencies.py  exceptions.py  main.py  middlewares.py
services/api/src/tkp_api/agents/: __init__.py  guardrail.py  orchestrator.py  sandbox.py  tools.py
services/api/src/tkp_api/api/: __init__.py  agents.py  auth.py  chat.py  documents.py  feedback.py  governance.py  health.py  knowledge_bases.py  metrics.py  ops.py  permissions.py  retrieval.py  router.py  tenants.py  users.py  workspaces.py
services/api/src/tkp_api/core/: __init__.py  config.py  context.py  error_codes.py  exceptions.py  logging_config.py  rate_limit.py  rate_limit_handler.py  security.py
services/api/src/tkp_api/db/: base.py  session.py
services/api/src/tkp_api/governance/: __init__.py  deletion.py  pii.py  retention.py
services/api/src/tkp_api/messaging/: __init__.py  events.py  kafka.py
services/api/src/tkp_api/middleware/: request_size_limit.py  sensitive_operation.py  transaction.py
services/api/src/tkp_api/models/: __init__.py  agent.py  agent_checkpoint.py  audit.py  auth.py  base.py  conversation.py  enums.py  feedback.py  knowledge.py  ops.py  permission.py  quota.py  tenant.py  workspace.py
services/api/src/tkp_api/observability/: __init__.py  health.py  logging.py  metrics.py  telemetry.py
services/api/src/tkp_api/schemas/: __init__.py  agent.py  auth.py  chat.py  common.py  document.py  knowledge.py  ops.py  permission.py  responses.py  retrieval.py  tenant.py  user.py  workspace.py
services/api/src/tkp_api/services/: __init__.py  agent_checkpoint.py  agent_planner.py  answer_grading.py  audit.py  authorization.py  context_packing.py  cost.py  embedding_factory.py  embedding_gateway.py  embedding_service.py  feedback_replay.py  ingestion.py  local_auth.py  membership_sync.py  ops.py  ops_center.py  ops_metrics.py  parent_child_merger.py  permissions.py  policy_scorer.py  query_preprocessing.py  quota.py  rag_client.py  retrieval.py  retrieval_eval.py  retrieval_local.py  sensitive_operation.py  storage.py  tenant_bootstrap.py
services/api/src/tkp_api/services/rag/: __init__.py  answer_grader.py  elasticsearch_client.py  embeddings.py  hybrid_retrieval.py  llm_generator.py  query_rewriter.py  reranker.py  retrieval_improved.py  vector_retrieval.py
services/api/src/tkp_api/utils/: __init__.py  masking.py  permissions.py  response.py
services/api/tests/: test_auth_mfa_totp.py  test_config_validation.py  test_http_api_full_coverage.py  test_identity_membership_context.py  test_identity_normalization.py  test_integration_membership_permissions.py  test_masking_utils.py  test_openai_config_wiring.py  test_ops_metrics.py  test_ops_phase3_service.py  test_permission_defaults.py  test_quota_and_cost_services.py  test_rag_client.py  test_retrieval_eval_service.py  test_retrieval_service.py  test_security_and_ingestion.py  test_service_components.py  test_storage_backends.py  test_tenant_context_from_token.py  test_tenant_membership_sync.py  test_vector_retrieval.py
services/rag/: pyproject.toml
services/rag/src/tkp_rag/: __init__.py  app.py  dependencies.py
services/rag/src/tkp_rag/api/: __init__.py  internal.py
services/rag/src/tkp_rag/core/: __init__.py  config.py
services/rag/src/tkp_rag/db/: __init__.py  session.py
services/rag/src/tkp_rag/schemas/: __init__.py  internal.py
services/rag/src/tkp_rag/services/: __init__.py  agent.py  embeddings.py  llm_generator.py  retrieval.py  retrieval_improved.py  vector_retrieval.py
services/rag/tests/: test_agent_service.py  test_config_validation.py  test_internal_auth.py  test_rag_core.py  test_retrieval_service.py
services/worker/: Dockerfile  pyproject.toml
services/worker/src/tkp_worker/: __init__.py  chunker.py  config.py  embeddings.py  image_parser.py  main.py  main_old.py  ocr.py  parsers.py  table_extractor.py
services/worker/tests/: test_chunking.py  test_config_validation.py  test_ingestion_pipeline.py  test_storage_backends.py
sql/: README.md  init_all.sql
tests/: test_pre_commit_ci_gate.py  test_sql_governance_script.py  test_stack_governance.py
tests/e2e/: test_prod_data_plane_http.py
