[project]
name = "tkp-api"
version = "0.1.0"
description = "API service for multi-tenant knowledge platform"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.116.1",
    "minio==7.2.18",
    "oss2==2.19.1",
    "pgvector==0.4.1",
    "psycopg[binary]==3.2.9",
    "pydantic-settings==2.11.0",
    "pyjwt[crypto]==2.10.1",
    "redis==5.0.8",
    "python-multipart==0.0.20",
    "sqlalchemy==2.0.43",
    "uvicorn[standard]==0.35.0",
    "openai==1.54.0",
    "tiktoken==0.7.0",
    "elasticsearch==8.12.0",
    "cohere==5.0.0",
    "sentence-transformers==2.3.0",
    "opentelemetry-api==1.21.0",
    "opentelemetry-sdk==1.21.0",
    "opentelemetry-instrumentation-fastapi==0.42b0",
    "opentelemetry-instrumentation-sqlalchemy==0.42b0",
    "opentelemetry-instrumentation-redis==0.42b0",
    "opentelemetry-exporter-otlp-proto-grpc==1.21.0",
    "prometheus-client==0.19.0",
    "kafka-python==2.0.2",
    "langdetect==1.0.9",
    "pyspellchecker==0.7.2",
    "slowapi==0.1.9",
    "alembic==1.13.1",
    "tenacity==8.2.3",
    "cachetools==5.3.2",
    "orjson==3.9.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-cov==4.1.0",
    "pytest-asyncio>=1.3.0",
    "httpx==0.27.0",
    "black==24.2.0",
    "ruff==0.2.2",
    "mypy==1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tkp_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "smoke: 快速冒烟回归测试",
    "full: 全量强校验测试（发版前执行）",
    "permissions_matrix: 权限矩阵专项测试",
]
addopts = [
    "--strict-markers",
    "--tb=short",
]

[tool.coverage.run]
source = ["src/tkp_api"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.black]
line-length = 120
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
line-length = 120
target-version = "py312"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "tkp_api.services.retrieval_local",
    "tkp_api.services.rag.elasticsearch_client",
    "tkp_api.services.rag.llm_generator",
    "tkp_api.services.embedding_gateway",
    "tkp_api.services.rag.reranker",
    "tkp_api.agents.orchestrator",
]
disable_error_code = [
    "assignment",
    "arg-type",
    "call-overload",
    "attr-defined",
    "return-value",
    "union-attr",
    "var-annotated",
    "no-redef",
    "misc",
    "name-defined",
    "return",
]
