[project]
name = "tkp-rag"
version = "0.1.0"
description = "RAG service for multi-tenant knowledge platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "pgvector>=0.4.1",
    "psycopg[binary]>=3.2.9",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
    "openai>=1.54.0",
    "tiktoken>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tkp_rag"]
