[project]
name = "tkp-worker"
version = "0.1.0"
description = "Ingestion worker service for multi-tenant knowledge platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic-settings>=2.11.0",
    "psycopg[binary]>=3.2.9",
    "sqlalchemy>=2.0.43",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tkp_worker"]
